opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_deriving_hardcaml"
bug-reports: "https://github.com/janestreet/ppx_deriving_hardcaml/issues"
dev-repo: "git+https://github.com/janestreet/ppx_deriving_hardcaml.git"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base"
  "hardcaml"
  "ppx_jane"
  "ppx_sexp_conv"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
Rewrite OCaml records for use as Hardcaml Interfaces.

An interface in Hardcaml is an OCaml record with special attributes including
a bit width and RTL netlist name.  Input and output ports of a hardware design
can then be accessed through the OCaml record.  This allows easier management
of bundles of ports when working with the Simulator, Netlist generation or
hierarchical designs.
"
